# slop-guard

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.claude/skills/qa/: SKILL.md
.codex/: config.toml
.github/workflows/: pages.yml  publish.yml
docs/: index.html
docs/assets/: app.js  styles.css
slop-guard-ext/: .gitignore  README.md  background.js  build.py  bundle.py  config.js  manifest.chrome.json  manifest.firefox.json  popup.html  popup.js  python_bundle.js  update.ps1  update.sh
slop-guard-ext/tests/: conftest.py  test_build_and_background.py  test_popup_chromium.py  test_popup_firefox.py
src/slop_guard/: analysis.py  cli.py  fit_cli.py  markdown.py  server.py
src/slop_guard/rules/: pipeline.py
src/slop_guard/rules/assets/: default.jsonl
src/slop_guard/rules/paragraph_level/: blockquote_density_rule.py  bold_term_bullet_run_rule.py  bullet_density_rule.py  horizontal_rule_overuse_rule.py  structural_pattern_rule.py
src/slop_guard/rules/passage_level/: extreme_sentence_rule.py  rhythm_rule.py
src/slop_guard/rules/sentence_level/: contrast_pair_rule.py  pithy_fragment_rule.py  setup_resolution_rule.py  slop_phrase_rule.py  tone_marker_rule.py
src/slop_guard/rules/word_level/: slop_word_rule.py
tests/: conftest.py  test_advice_updates.py  test_analysis_pipeline.py  test_cli.py  test_contrast_pair_rule.py  test_extreme_sentence_rule.py  test_fit_cli.py  test_markdown.py  test_rule_framework.py  test_server_main.py  test_server_tools.py  test_setup_resolution_rule.py
